# PubSub

./: README.md  package.xml
.github/workflows/: cd.yaml
docker/: Dockerfile
kubernetes/deployments/: pubsub.yaml
msg/: BasicMessage.msg
scripts/: start_publisher.sh  start_subscriber.sh
src/node1/: CMakeLists.txt
src/node1/src/: basic_publisher.cpp  basic_subscriber.cpp
